# ai-voice-cover-mvp

./: .gitignore  README.md  pyproject.toml
docs/: open_source_setup.md
src/voice_cover_mvp/: __main__.py  app.py  pipeline.py  youtube.py
tests/: test_app.py  test_pipeline.py  test_youtube.py
